* Release 2.5.3

Fix file descriptor leak when IP address lookup fails.

* Release 2.5.2

Cross-platform fix for checksumming code. This is *incompatible* with version
2.5.1. As a temporary workaround, setting "bugcompatibility 251" will maintain
compatibility with release 2.5.1 for little-endian platforms (e.g. Intel).
This will be removed from the final production release.

Upgrade to Inno Setup 4.

More documentation fixes.

Increased the default thread stack size to 64k and added "threadstacksize" for
debug/test purposes.

Fix handling of HTTP/1.1 responses from proxies.

Added "acceptconnecttimeout" (supersedes "connecttimeout") along with
"connectattempts" (and -C command-line option), "serverconnecttimeout" and
"targetconnecttimeout".

Fixed bug with "clienthost" not being honoured when Zebedee was used as
a service.

Added display of NOTICE.txt to the Windows install process.

* Release 2.5.1 (2003/07/05)

Critical fix to the checksumming code, which wouldn't work if messages
got out of sync between client and server. This is *incompatible* with
version 2.5.0.

Fixed documentation comments on message integrity.

* Release 2.5.0 (2003/07/02)

Dropped backwards compatibility with Zebedee 1.x versions of the protocol.

Added message integrity checking ("checksumlevel" and "minchecksumlevel"
keywords), "dropunknownprotocol" and "lockprotocol" features and per-target
address checking. These are all derived from patches submitted by Henrick
Lund. Great work Henrick!

Added the ability to hand the peer address, target address and target
port to key generation commands (add a "+" to the end of the command
to get three extra arguments provided).

Added "httpproxyauth" -- thanks to James CE Johnson.

Added "runasuser/-N" -- thanks to Thomas Melzer.

Added per-target ID checking -- originally by Alain Turbide.

Fixed a bug with "anonymous" tunnel specs (using a "*" to default to
the server address).

Fixed bug writing to syslog when detached -- thanks to Kyle Dent.
